fix(server): disable server-role in StandardTaskScheduler